--- a/src/index.css
+++ b/src/index.css
@@ -365,6 +365,10 @@ img.icon {
 
 /*Projects start*/
 
+.projects-subtext {
+  padding: 0px 40px;
+}
+
 .card-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(0, 350px));
@@ -625,6 +629,7 @@ input:checked + .slider:before {
   height: 500px;
   cursor: pointer;
   box-sizing: border-box;
+  color: white;
 }
 
 .flip-card-inner {
@@ -669,8 +674,7 @@ input:checked + .slider:before {
 }
 
 .flip-card-back {
- background: linear-gradient(135deg,rgba(11, 134, 158, 1) 0%, rgba(62, 62, 176, 1) 35%, rgba(9, 22, 105, 1) 100%);
-  color: white;
+  background: linear-gradient(135deg,rgba(11, 134, 158, 1) 0%, rgba(62, 62, 176, 1) 35%, rgba(9, 22, 105, 1) 100%);
   transform: rotateY(180deg);
 }
 
@@ -680,7 +684,6 @@ input:checked + .slider:before {
   padding: 10px 20px;
   font-size: 1.5em;
   font-weight: 600;
-  color: white;
 }
 
 /*Card end*/
