--- a/src/index.css
+++ b/src/index.css
@@ -199,6 +199,7 @@ img.icon {
   max-width: calc((100vh - 60px)*0.864);
   max-height: calc(100vh - 60px);
   margin: 0;
+  padding: 0 10px;
 }
 
 .header-figure-isoRoom {
